package protobuf;

option go_package = "protobuf/";

enum Ty {
  APPEND_ENTRY = 0;
  REQUEST_VOTE = 1;
  APPEND_RESPONSE = 2;
  VOTE_RESPONSE = 3;
  COPY_STATE = 4;
}

message Message {
  required Ty Kind = 1;
  required bytes Payload = 2;
}
